--- a/let'sGetIt_JS/DOM객체다루기_끝말잇기게임/개념설명.md
+++ b/let'sGetIt_JS/DOM객체다루기_끝말잇기게임/개념설명.md
@@ -6,3 +6,48 @@
   2. 각 절차는 항상 같은 내용이어야 한다.
   3. 모든 가능성을 고려해야 한다.
   4. 예시는 절차를 검증하는 데 사용한다.
+
+# 2. 대화창
+
+  1. prompt : 사용자에게 입력값을 받음.
+  2. alert : 사용자에게 경고를 줌.
+  3. confirm : 사용자에게 확인을 받음.(YES/NO)
+
+# 3. HTML 태그 선택하기
+
+  > document.querySelector('선택자');
+  - 선택자 : HTML 태그를 선택할 수 있게 도와주는 문자열.
+
+  - 예시
+    * const $input = document.querySelector('input');
+
+      (tip! HTML태그를 변수로 넣을땐 '$변수명'으로 하면 전체적으로 파악하기 쉽다.)
+  
+  - 태그를 모두 선택하고 싶으면?
+
+    - document.querySelectorAll('선택자')
+
+<br>
+  - 태그가 여러 개일때 querySelector 함수를 사용하면?
+
+      - 맨 앞에 있는 태그만 선택됨.
+  
+  - class 속성 값을 선택자로 사용하는 방법
+
+    document.querySelectorAll('.클래스')
+
+  - id 속성 값을 선택자로 사용하는 방법
+
+    document.querySelectorAll('#아이디')
+
+  - 자손 태그를 선택하는 방법
+
+    document.querySelector('부모태그 자손태그');
+  
+# 4. 이벤트 리스너 달기(콜백함수)
+
+ > 태그.addEventListener('이벤트 이름',리스너함수);
+ 
+  이벤트를 수행한 후 리스너함수를 수행함.
+  
+  주의! 2번째 인자는 함수! 임으로 함수를 바깥으로 빼 변수에 넣은 다음에는 2번째 인자에 변수만 넣어야 함( 변수() X )
