--- a/CleanCode/분기다루기/조건문다루기.md
+++ b/CleanCode/분기다루기/조건문다루기.md
@@ -31,7 +31,7 @@ if(NUMBER >= 0){
 // 20세 미만인 사람에겐 reprot함수가 발생하고 모든 유저들에게 인사를 하는 함수.
 
 function getHelloCustomer(user) {
-  if(user.age < 20>) {
+  if(user.age < 20) {
     report(user);
   } else {
     return '안녕하세요.';
