Add: 취업특강 정리

--- a/5일차(221230)/특강정리.md
+++ b/5일차(221230)/특강정리.md
@@ -24,14 +24,14 @@
 3. 유저가 실사용 하는 프로젝트를 개발 & 유지보수
 
 ### MOOC 활용
-1. Coursera
-2. Edx
- - CS50 추천 - 부스트캠프 모두를 위한 컴퓨터 과학
-3. Udacity
-4. K-MOOC
+1. [Coursera](https://www.coursera.org/)
+2. [Edx](https://www.edx.org/)
+ - CS50 추천 - [부스트캠프](https://www.boostcourse.org/cs112) 모두를 위한 컴퓨터 과학
+3. [Udacity](https://www.udacity.com/)
+4. [K-MOOC](http://www.kmooc.kr/)
 
 ### 공모전 활용
-1. kaggle (Datasets있음)
+1. [kaggle](https://www.kaggle.com/) (Datasets있음)
 2. 실생활에서 불편한 점 해결해보기
 
 ### 취업 정보 사이트
@@ -44,4 +44,4 @@
 * 더브이씨 : 스타트업의 정보들
 
 ### 기타
-* 커피챗
+* [커피챗](https://www.coffeechat.kr/) : 현업 개발자에게 커피챗을 신청할 수 있는 사이트
