--- a/7일차(230103)/반복문.md
+++ b/7일차(230103)/반복문.md
@@ -2,10 +2,12 @@
 
 ### Range
 - 반복문에서 많이 쓰일 range 알고가기
+
 > range(시작 숫자, 끝 숫자(***포함X***), 스탭지정)
 
 - 숫자의 리스트를 나타내기 위해 사용
 - 변경이 불가능하며, 반복 가능
+
 ```py
 num_list = range(11)
 print(num_list)
@@ -47,7 +49,7 @@ print(list(num_list2))
 
 - 스탭을 -1로 주어 시작 숫자부터 -1씩 증가시킴 
 
-##### 예제2
+##### 예제 2
 - 10부터 1까지 리스트
 
 ```py
@@ -129,7 +131,7 @@ for index** in range(len(chars)):
 ** index를 idx 또는 i로 줄여서 쓰기도 함.
 ** range(5)는 객체지만 이해를 위해 대략적으로 적음.
 
-#### 예제 문자열 요소 하나씩 순회하기 - enumerate() 활용
+#### 문자열 요소 하나씩 순회하기 - enumerate() 활용
 - enumerate
   - 몇 번째 반복문인지 확인하기 위해 사용
   - 인덱스 번호와 순회할 객체의 원소를 tuple 형태로 반환함.
@@ -181,7 +183,39 @@ if 'a' in word:
 ```
 
 ### while문
-~~추후 업데이트 예정~~
+- 조건식이 참인 경우 반복적으로 코드 블록 실행.
+- 코드 블록이 모두 실행 후, 다시 조건식을 검사하며 반복적으로 실행. 
+- 종료조건에 해당하는 코드를 통해 반복문을 종료시켜야 함.
+  - 🕵 주의! 종료 조건 없으면 무한루프에 빠짐
+
+```py
+while 표현식:
+  # true일때 실행할 코드 블록
+```
+##### 예제 4
+- 1부터 사용자가 입력한 양의 정수까지의 총합을 구하는 코드 작성
+
+```py
+user_num = int(input('정수를 입력하세요 > ')) # 5
+
+num_start = 1
+sum = 0
+while num_start <= user_num : # num_start가 user_num 를 초과되면 반복 종료
+  sum += num_start # sum에 num_start를 누적해서 더해주고
+  num_start += 1 # num_start 1씩 증가
+print(sum) # 15
+```
+- for문으로 코드 구현하기
+
+```py
+user_num = int(input('정수를 입력하세요 > ')) # 5
+
+num_start = 1
+sum = 0
+for number in range(1,user_num+1): # 1~user_num까지 숫자 객체를 만들어서 number가 요소를 순회함.
+  sum += number # sum에 number를 누적합 시킴
+print(sum) # 15 # 반복이 종료되고 sum을 출력함
+```
 
 ### 반복제어
 #### break
