Mod: 데이터 타입 딕셔너리 추가 학습 후 정리

--- a/6일차(230102)/데이터타입.md
+++ b/6일차(230102)/데이터타입.md
@@ -64,6 +64,7 @@ ex) not ture => False
 - 반환값이 없는 함수에서 사용하기도 함.
 
 ## 컨테이너
+  : 여러 개의 객체를 담을 수 있는 틀
 ### 시퀀스 (나열)
 #### 문자열
 - 모든 문자는 str 타입
@@ -143,7 +144,63 @@ print(even_numbers) # [4,6,8]
 ```
 
 #### 레인지
+: 숫자의 나열
 
 ### 컬렌션/비시퀀스 (모음)
 #### 집합
 #### 딕셔너리
+: 키와 값들의 모임
+- 키(key) : 불변 자료형만 가능
+  - 변경이 가능한 리스트, 딕셔너리 등은 불가능
+- 값(values) : 어떠한 형태 상관없음
+- 변경이 가능하고 반복 가능
+  - 딕셔너리는 반복하면 key가 반환됨.
+
+> 딕셔너리이름 = { key : value}
+
+##### 딕셔너리 접근하기
+```py
+movie = {
+  'title': '아바타',
+  'genres' : ['SF','액션'],
+  'adult' : False,
+}
+
+movie['genres'] # ['SF','액션']
+movie['time'] # keyError
+```
+
+##### 딕셔너리 키 값 추가/변경/삭제
+- 키와 값의 쌍을 추가 가능
+- 값 변경 가능
+- 키 삭제 가능 => .pop() 활용
+
+```py
+Lee = {'수학' : 100, '국어' : 80}
+
+# 키와 값의 쌍 추가
+Lee['영어'] = 100 
+print(Lee) # {'수학': 100, '국어': 80, '영어': 100}
+
+# 값 변경
+Lee['국어'] = 75
+print(Lee) # {'수학': 100, '국어': 75, '영어': 100}
+
+# key 삭제
+Lee.pop('수학')
+print(Lee) # {'국어': 75, '영어': 100}
+Lee.pop('미술') # keyError
+```
+
+##### 딕셔너리 순회
+- 순회하면 key값을 반환
+
+```py
+Lee = {'수학': 100, '국어': 75, '영어': 100}
+
+for subject in Lee:
+  # 키 순회
+  print(subject,end = ' ' ) # 수학 국어 영어 
+  # 값 순회
+  print(Lee[subject],end = ' ') # 100 75 100 
+```
