--- a/6일차(230102)/데이터타입.md
+++ b/6일차(230102)/데이터타입.md
@@ -101,6 +101,13 @@ ex) not ture => False
   ```
 
 #### 튜플
+- 불변한 값들의 나열
+- 순서를 가짐, 서로 다른 타입의 요소 가질 수 있음
+- ***변경 불가능*** , 반복 가능
+  - 추가/삭제도 불가능
+
+- 소괄호 형태로 정의, 콤바로 구분
+
 #### 리스트 => 배열
 - 변경 가능한 값의 나열된 자료형
 - 순서를 가지고 서로 다른 타입의 요소를 가질 수 있음
@@ -147,7 +154,38 @@ print(even_numbers) # [4,6,8]
 : 숫자의 나열
 
 ### 컬렌션/비시퀀스 (모음)
-#### 집합
+#### Set(세트, 집합)
+- 유일한 값들의 모음
+- 중괄호 혹은 set()을 통해 생성
+  - 빈 Set을 만들기 위해 반드시 Set()으로 생성
+- 순서가 없고 중복된 값이 없음
+  - 별도의 값에 접근할 수 없음
+
+- 변경 가능, 반복 가능
+- 값 추가는 .add() / 값 삭제는 .remove()
+
+##### set 활용 case
+- 다른 컨테이너에서 중복된 값을 쉽게 제거 가능.
+  - 주의! 순서가 무시되므로 순서가 중요하면 사용할 수 없음.
+
+- 리스트에서 고유한 지역의 개수 구하는 법
+
+```py
+# set 사용하지 않는 방법
+my_list = ['서울','서울','대전','광주','서울','대전','부산','부산']
+
+result = []
+for value in my_list :
+  if value not in result :
+    result.append(value)
+
+print(len(result)) # 4
+
+# set 사용
+print(set(my_list)) # {'부산', '광주', '서울', '대전'} / 순서 무작위
+print(len(set(my_list))) # 4
+```
+
 #### 딕셔너리
 : 키와 값들의 모임
 - 키(key) : 불변 자료형만 가능
