Style: 사진 파일 추가 및 개행 수정

--- a/17일차(230117)/리스트.md
+++ b/17일차(230117)/리스트.md
@@ -14,6 +14,8 @@
 - 데이터 타입은 고정임.
 
 <br>
+예를 들면,    
+
 A = [1,2,3,4,5] 라면 아래의 표처럼 데이터가 저장되어 있음.
 
 메모리주소|1000|1004|1008|1012|1016|
@@ -28,11 +30,15 @@ index|A[0]|A[1]|A[2]|A[3]|A[4]|
 - 다양한 데이터 타입을 저장
 - 데이터 메모리에 연속적으로 저장되지 않음
 
-![연결리스트_1](연결리스트_1.jpg)
+<br>
+
+![연결리스트_1](https://user-images.githubusercontent.com/39366835/212969977-3b4beea1-e2fb-410c-86f2-49d6928c08f9.jpg)
+
 - data 1이 저장되어 있고 다음 데이터의 위치를 가리킴
 
+
+![연결리스트_2](https://user-images.githubusercontent.com/39366835/212970056-cdf8ce99-0c7e-497c-906a-81503a64d91c.jpg)
 - 삽입, 삭제가 편리 => 연결 리스트의 길이를 자유롭게 변경 가능
-![연결리스트_2](연결리스트_2.jpg)
 - 데이터를 추가하여 방향만 가리키면 됨.
 
 # 결론
