fix: 특수문자 출력을 위함(마크다운 문법에 의해 출력하지 않음)

--- a/일일회고/230216_일일회고.md
+++ b/일일회고/230216_일일회고.md
@@ -23,7 +23,7 @@
 
 - deep-dive 스터디에서 오늘 정규 표현식에 대해 배웠다.
 - 이전에는 프리코스를 진행할땐 정규표현식이 필요할때마다 인터넷에 찾아서 썼다. 내가 원하는 정규 표현식의 코드를 작성하지 못하고 코드를 그대로 옮겨 사용했더니 조금만 조건이 바껴도 활용하지 못하고 다시 검색했다. 이번 기회에 확실히 정리했다.
-- 가장 헷갈렸던 [^]과 ^[]차이와 +,?의 의미들을 다시 정리했고, 여러가지 상황에서 자주 쓰는 정규표현식을 공부했다. 이제 다른 프로젝트를 할때 정규표현식을  조금 더 수월하게 사용할 수 있을 것 같다.
+- 가장 헷갈렸던 [^]과 ^[\]차이와 +,?의 의미들을 다시 정리했고, 여러가지 상황에서 자주 쓰는 정규표현식을 공부했다. 이제 다른 프로젝트를 할때 정규표현식을  조금 더 수월하게 사용할 수 있을 것 같다.
 
 ## 🙏Longed for
 - on 과 using의 공통점과 차이점에 대해 정리하고 블로그 올리기
