style: 실습파일 경로 수정

--- a/html-css/kdt_html_css/01_web/개념.md
+++ b/html-css/kdt_html_css/01_web/개념.md
@@ -22,7 +22,7 @@
     - ex) HTML(웹페이지의 구조를 쌓아가는 언어), Markdown(작성하는 구조를 쌓아하는 언어)
 
 ## HTML
-👩‍💻 [HTML 실습파일](../)
+👩‍💻 [HTML 실습파일](./%EC%8B%A4%EC%8A%B5/01_HTML.html)
 
 ### HTML의 요소와 속성
 
@@ -58,7 +58,7 @@
 ## CSS(Cascading Style Sheet)
 : 웹 페이지의 디자인과 레이아웃을 구성하는 언어
 
-* 👩‍💻 [CSS 실습파일]()
+* 👩‍💻 [CSS 실습파일](./%EC%8B%A4%EC%8A%B5/02_CSS.html)
 ```css
 선택자(Selctor) {
   /* 속성과 값을 하나로 묶어서 선언이라고 칭함. */
