style: 실행파일 바로가기 추가

--- a/Django/kdt_Django/05_model/개념.md
+++ b/Django/kdt_Django/05_model/개념.md
@@ -1,4 +1,5 @@
 # Django Model
+- 👩‍💻 [Django Model 전체 실습파일](./model_practice/)
 
 <p align="center">
 <img src = 'https://user-images.githubusercontent.com/39366835/228477058-c1e8b3d8-3f9d-465c-9023-0be7730dd914.PNG'>
@@ -133,7 +134,20 @@ You can accept the default 'timezone.now' by pressing 'Enter' or you can provide
 ```
 3. migrate
 
+
 ##### 왜? 첫 번째 설계도에 덮어씌우지 않고 변경된 부분의 설계도를 추가적으로 쌓아나갈까?
+- 추가된 migrations 파일은 그 전 파일에 의존됨
+
+```py
+# articles/migrations/0002_auto_20230328_1431.py
+
+class Migration(migrations.Migration):
+    # 0001_initial.py에 의존함
+    dependencies = [
+        ('articles', '0001_initial'),
+    ]
+```
+
 - commit과 유사
 - rollback을 하기 위해서
     - 7번 설계도에서 문제가 생기면 7번 설계도를 삭제하고 6번 설계도로 다시 재구축하면 된다.
